--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: python
+
 python:
   - "2.6"
   - "2.7"
-  - "3.4"
+  - "3.3"
   - "pypy"
 
 env:
@@ -12,6 +13,11 @@ env:
   - FLASK=0.9
   - FLASK=0.10.1 PUSHER="<1.0"
   - FLASK=0.10.1
+
+matrix:
+  include:
+    - python: 3.4
+      env: FLASK=0.10.1
 
 install:
   - pip install -q Flask==$FLASK pusher$PUSHER
